--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,16 @@ body {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+}
+
+#onas-dropdown {
+    min-width: 114.738px;
+}
+
+#jakresit-dropdown {
+    min-width: 128.15px;
 }
 
 .dropdown-menu a {
@@ -107,3 +114,31 @@ body {
 .task-headline.task-headline-bonus {
     background-color: #FEC601cc;
 }
+
+/*              Homepage CSS            */
+.home-info, .home-info h1 {
+    border-style: solid;
+    text-align: center;
+    padding: 10px 20px;
+    margin: 10px 300px;
+}
+
+/*TODO home-info link styling
+
+.home-info a {
+
+}
+
+*/
+
+/*TODO image-tile styling
+
+.image-tiles {
+
+}
+
+.tile {
+
+}
+
+*/
